--- a/smysl3/blog/templates/home_page.html
+++ b/smysl3/blog/templates/home_page.html
@@ -1,12 +1,16 @@
 <html>
     <title>Site Belekov Aden</title>
     <h1>Belekov Aden</h1>
-<div class="article-list">
+    <div class="article-list">
     {% for article in acticles %}
         <div class="article">
-            <h2 class="article-title">{{ article.title }}</h2>
+            <h2 class="article-title">
+                <a href="blog/{{ article.slug }}">
+                    {{ article.title }}
+                </a>
+            </h2>
             <p class="article-summary">{{ article.summary }}</p>
         </div>
     {% endfor %}
-</div>
+    </div>
 </html>
