--- a/smysl3/blog/templates/article_page.html
+++ b/smysl3/blog/templates/article_page.html
@@ -1,8 +1,11 @@
-<html>
-    <title>Site Belekov Aden</title>
+{% extends 'base.html' %}
+
+{% block title %}Site Belekov Aden{% endblock %}
+
+{% block content %}
     <h1>Belekov Aden</h1>
     <div class="article">
         <h2 class="article-title">{{ article.title }}</h2>
         <p class="article-full-text">{{ article.full_text }}</p>
     </div>
-</html>
+{% endblock %}
