--- a/smysl3/blog/templates/base.html
+++ b/smysl3/blog/templates/base.html
@@ -1,13 +1,31 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %}</title>
-    {% block head %}
-    {% endblock %}
-</head>
-<body>
-{% block content %}
-{% endblock %}
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>{% block title %}{% endblock %}</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <link href="{% static 'blog/style.css' %}" rel="stylesheet">
+        {% block head %}
+        {% endblock %}
+    </head>
+    <body>
+        <div class="container">
+            <div class="row page-header">
+                <div class="col">
+                    <h1 class="avatar-top">
+                        <img src="{% static 'blog/image/python-logo.png'%}">
+                        <span class="author-name">Belekov Aden</span>
+                    </h1>
+                </div>
+              </div>
+            {% block content %}
+            {% endblock %}
+        </div>
+        <footer class="footer">
+            <div class="container">
+                © Белеков Аден 2017–{% now "Y" %}
+            </div>
+        </footer>
+    </body>
 </html>
