--- a/smysl3/blog/templates/home_page.html
+++ b/smysl3/blog/templates/home_page.html
@@ -1,18 +1,25 @@
 {% extends 'base.html' %}
+{% load static %}
+
 {% block title %}Site Belekov Aden{% endblock %}
 
 {% block content %}
-    <h1>Belekov Aden</h1>
-    <div class="article-list">
-    {% for article in acticles %}
-        <div class="article">
-            <h2 class="article-title">
-                <a href="{{ article.get_absolute_url }}">
-                    {{ article.title }}
-                </a>
-            </h2>
-            <p class="article-summary">{{ article.summary }}</p>
+    <div class="blog">
+        <div class="row">
+            <div class="col-md-8 col-sm-12">
+                <div class="article-list">
+                    {% for article in acticles %}
+                    <div class="article">
+                        <h2 class="article-title">
+                            <a href="{{ article.get_absolute_url }}">
+                                {{ article.title }}
+                            </a>
+                        </h2>
+                        <p class="article-summary">{{ article.summary }}</p>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
         </div>
-    {% endfor %}
     </div>
 {% endblock %}
